1999-04-29  Hippo

	* libs/ModGraph.{h,c}: new function (Graphics *)CreateGraphics(void);
	* libs/Picture.{h,c}: new function (void)SavePictureCMap.

1999-04-28  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/session.c (callback_save_yourself2): set the
	_GSM_Priority property used by the Gnome session manager.
	Use SmLISTofARRAY8 for SmDiscardCommand as the protocol demands 
	on POSIX systems, but leave the old code using SmARRAY8 in as a 
	hack for buggy xsm. Define XSM_BUGGY_DISCARD_COMMAND to use it.
	(SaveWindowStates): save res_name under [RES_NAME], not res_class.

	* fvwm/stack.c (LowerWindow): 
	(RaiseWindow): 
	* fvwm/screen.h (ScreenInfo): remove LastWindowRaised.

	* fvwm/stack.h: 
	* fvwm/stack.c (CanBeRaised): new function to determine if
	a window can be raised any further.

	* fvwm/events.c (HandleButtonPress): 
	* fvwm/builtins.c (raiselower_func): use CanBeRaised instead
	of LastWindowRaised to determine if a window should be raised.

1999-04-28  Hippo

	* libs/ModGraph.{h,c}: SetWindowBackground takes width/height of window

1999-04-28  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/module.c:
	* fvwm/move_resize.c:
	* fvwm/misc.c:
	* fvwm/menus.c:
	* fvwm/functions.c:
	* fvwm/fvwm.c:
	* fvwm/builtins.c: use events.h

	* fvwm/misc.h: moved prototypes to events.h
	* fvwm/events.h: new file

	* fvwm/misc.c (Keyboard_shortcuts): moved function from move_resize.c
	to misc.c

	* fvwm/builtins.c:
	* fvwm/add_window.c:
	* fvwm/functions.c:
	* fvwm/virtual.c:
	* fvwm/placement.c:
	* fvwm/events.c: include move_resize.h

	* fvwm/move_resize.c (InteractiveMove):
	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	* fvwm/move_resize.c (DisplayPosition):
	* fvwm/move_resize.c (DisplaySize): now static

	* fvwm/misc.h: moved all move/resize related prototypes to
	move_resize.h

	* fvwm/Makefile.am (fvwm2_SOURCES): add new files, remove old ones
	* fvwm/move_resize.h: new file for move_resize prototypes